package edu.hitsz.prop;
/**
 * @author xu
 */
public class FireProp extends AbstractProp{
    public FireProp(int  locationX, int locationY, int speedX, int speedY){
        super(locationX, locationY, speedX, speedY);
        this.propkind = 3;
    }
}
