package factory;

import prop.AbstractProp;

public interface PropFactory {
    AbstractProp create(int x,int y);
}
