@startuml
'https://plantuml.com/class-diagram

class Game

interface EnemyFactory {
    + create():AbstractAircraft
}

interface PropFactory {
    + create(int x,int y):AbstractProp
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # kind:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
}

abstract class AbstractProp
{
    - propkind
    + AbstractProp(int locationX, int locationY, int speedX, int speedY):void
    + getPropkind():int
}

Game ..> EnemyFactory
Game ..> PropFactory
Game ..> AbstractAircraft
Game ..> AbstractProp

EnemyFactory <.. EliteFactory
EnemyFactory <.. MobFactory
EnemyFactory <.. BossFactory
EliteFactory ..> EliteEnemy:create
MobFactory ..> MobEnemy:create
BossFactory ..> BossEnemy:create

PropFactory <|.. BloodFactory
PropFactory <|.. BombFactory
PropFactory <|.. FireFactory
BloodFactory ..> BloodProp:create
FireFactory ..> FireProp:create
BombFactory ..> BombProp:create

AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- FireProp

class EliteFactory {
    + create():EliteEnemy
}

class MobFactory {
    + create():MobEnemy
}

class BossFactory {
    + create():BossEnemy
}

class BloodFactory {
    + create(int x,int y):BloodProp
}

class FireFactory {
    + create(int x,int y):FireProp
}

class BombFactory {
    + create(int x,int y):BombProp
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + kind():int
    + shoot():List<BaseBullet>
}

class EliteEnemy {
    - shootNum:int
    - power:int
    - direction:int
    - kind:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<BaseBullet>
    + addProp():List<AbstractProp>
}

class BossEnemy {
    - shootNum:int
    - power:int
    - direction:int
    - kind:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + enemyKind():int
    + shoot():List<Bullet>
}

class FireProp {
    - propkind
    + FireTool(int locationX, int locationY, int speedX, int speedY):void
}

class BloodProp {
    - propkind
    + BloodTool(int locationX, int locationY, int speedX, int speedY):void
}

class BombProp {
   - propkind
   + BombProp(int locationX, int locationY, int speedX, int speedY):void
}
@enduml